--- a/src/lidar/view/RootLayout.fxml
+++ b/src/lidar/view/RootLayout.fxml
@@ -16,6 +16,11 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
+                  <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="O" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </MenuItem>
                   <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Save">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="S" control="ANY" meta="UP" shift="UP" shortcut="UP" />
@@ -24,10 +29,10 @@
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
-            <Menu mnemonicParsing="false" text="Run">
+            <Menu mnemonicParsing="false" onShown="#handleRunMenu" text="Run">
               <items>
-                <MenuItem mnemonicParsing="false" text="Single line point cloud" />
-                  <MenuItem mnemonicParsing="false" text="Multi lines point cloud" />
+                <MenuItem fx:id="singleLineMenuItem" mnemonicParsing="false" text="Single line point cloud" />
+                  <MenuItem fx:id="multiLinesPointCloudMenuItem" mnemonicParsing="false" text="Multi lines point cloud" />
                   <MenuItem mnemonicParsing="false" text="Multi lines waveform" />
               </items>
             </Menu>
